# fungo_of_ocaml

./: dune-project  fungo.install  fungo.opam  test.fg
lib/: compiler.ml  dune  fungo_ast.ml  lexer.ml  parser.ml  token.ml
lib/frontend/: frontend.ml  lexer.ml  lexer.mli  parser.ml  parser.mli  token.ml
lib/typecheck/: typecheck.ml  types.ml
test/: dune  test_fungo.ml  test_helpers.ml  test_parser.ml  test_typechecker.ml
